@@ -1668,6 +1668,13 @@
 		</InterfaceArtInfo>
 <!-- BUG - Wonders Tab - end -->			
 
+<!-- BUG - Main Interface - BUG Options Screen - Start -->			
+		<InterfaceArtInfo>
+			<Type>BUG_OPTIONS_SCREEN_BUTTON</Type>
+			<Path>Art/BUG/Projects_Off.dds</Path>
+		</InterfaceArtInfo>
+<!-- BUG - Main Interface - BUG Options Screen - end -->			
+
 		<InterfaceArtInfo>
 			<Type>QUESTION_MARK</Type>
 			<Path>Art/BUG/QuestionMark.dds</Path>
