@@ -36,6 +36,7 @@ New Features:
 
 - Main Interface
 	Can choose from three sizes for the build/action buttons
+	Added a button to bring up the BUG Options Screen (top left)
 - Espionage Advisor
 	New layout shows EPs spent against you and icons for passive missions
 	Can swap cities and missions lists to see cost in each city for a single mission
